2006-05-25  Sebastien Pouliot  <sebastien@ximian.com> 

	* gdipFunctions.cs: Added wrapper methods for GdipGetRegionHRgn and 
	GdipCreateRegionHrgn functions.
	* Region.cs: Reimplement GetHrgn and FromHrgn methods using the GDI+
	calls.

2006-05-24  Sebastien Pouliot  <sebastien@ximian.com> 

	* PointConverter.cs: Fx 2.0 throws an ArgumentException in 
	CreateInstance if some values are missing from the dictionary, while
	1.x throws an NullReferenceException.
	* RectangleConverter.cs: Fx 2.0 throws an ArgumentException in 
	CreateInstance if some values are missing from the dictionary, while
	1.x throws an NullReferenceException.
	* SizeConverter.cs: Fx 2.0 throws an ArgumentException in 
	CreateInstance if some values are missing from the dictionary, while
	1.x throws an NullReferenceException.
	* SizeFConverter.cs: Fix CreateInstance to use float (not int).

2006-05-24  Sebastien Pouliot  <sebastien@ximian.com>

	* Font.cs: Added a Demand for UnmanagedCode on both ToLogFont methods.
	* Graphics.cs: Added checks for null Rectangle[F] arrays in 
	FillRectangles methods and removed the check for 0-length (MS throws).
	Let EndContainer mthod throws a NullReferenceException on 1.x profile.
	* Pen.cs: Let Brush property throws a NullReferenceException on 1.x.

2006-05-24  Sebastien Pouliot  <sebastien@ximian.com> 

	* Pen.cs: Clone the supplied brush in the .ctor (as the user may 
	dispose of it anytime). Make sure we're disposing our cached brush
	when disposing the pen.

2006-05-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* ContentAlignment.cs: Removed [Serializable] from 2.0 profile.
	* FontStyle.cs: Removed [Serializable] from 2.0 profile.
	* GraphicsUnit.cs: Removed [Serializable] from 2.0 profile.
	* KnownColor.cs: Removed [Serializable] from 2.0 profile.
	* RotateFlipType.cs: Removed [Serializable] from 2.0 profile.
	* StringAligment.cs: Removed [Serializable] from 2.0 profile.
	* StringDigitSubstitute.cs: Removed [Serializable] from 2.0 profile.